--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="manifest" href="site.webmanifest" />
     <link rel="icon" href="favicon.ico?v=2" type="image/x-icon" />
-    <title>Area of a triangle with JS</title>
+    <title>Volume of a pyramid with JS</title>
   </head>
   <body>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -31,23 +31,37 @@
             src="https://code.getmdl.io/1.3.0/material.min.js"
           ></script>
           <script src="./js/script.js"></script>
-          <span class="mdl-layout-title">Area of a triangle with JS</span>
+          <span class="mdl-layout-title">Volume of a pyramid with JS</span>
         </div>
       </header>
       <main class="mdl-layout__content">
         <h2>Formula</h2>
-        <h3>A = b * h / 2</h3>
+        <h3>A = lwh / 3</h3>
         <!-- Simple Textfield -->
         <form action="#">
-          <p>base</p>
+          <p>length</p>
           <div class="mdl-textfield mdl-js-textfield">
             <input
               class="mdl-textfield__input"
               type="text"
               pattern="-?[0-9]*(\.[0-9]+)?"
-              id="base"
+              id="length"
             />
-            <label class="mdl-textfield__label" for="base">base ...</label>
+            <label class="mdl-textfield__label" for="length">length ...</label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+        </form>
+        <br />
+        <form action="#">
+          <p>width</p>
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="text"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="width"
+            />
+            <label class="mdl-textfield__label" for="width">width...</label>
             <span class="mdl-textfield__error">Input is not a number!</span>
           </div>
         </form>
@@ -65,7 +79,6 @@
             <span class="mdl-textfield__error">Input is not a number!</span>
           </div>
         </form>
-        <br />
         <!-- Raised button with ripple -->
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
