--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <br />
         </div>
         <div id="fanta-bottle">
-          <img src="./images/lesson1.gif" alt="Fanta" />
+          <img src="./images/pyramid.PNG" alt="Fanta" />
         </div>
       </main>
     </div>
