--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         >
           Calculate
         </button>
-        <div id="area">
+        <div id="volume">
           <br />
         </div>
         <div id="fanta-bottle">
